--- a/src/asset/style/header.css
+++ b/src/asset/style/header.css
@@ -3,6 +3,11 @@
     justify-content: space-between;
     align-items: center;
     padding: 9px;
+    position: fixed;
+    z-index: 999;
+    background-color: #fff;
+    width: 420px;
+
 }
 
 
